force-app/main/default/objects/Loan_Restructure_Request__c/Loan_Restructure_Request__c.object-meta.xml
<CustomObject>
    <label>Loan Restructure Request</label>
    <pluralLabel>Loan Restructure Requests</pluralLabel>
    <description>Object used to handle loan EMI restructuring requests with simulation options and approval tracking within the banking system.</description>
    <nameField>
        <label>Request Number</label>
        <type>AutoNumber</type>
        <displayFormat>LRR-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>