force-app/main/default/objects/Loan_Restructure_Request__c/fields/Current_EMI__c.field-meta.xml
<CustomField>
    <fullName>Current_EMI__c</fullName>
    <label>Current EMI</label>
    <description>The current monthly EMI amount before restructuring</description>
    <inlineHelpText>Enter the customer's current monthly EMI payment in INR</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>