force-app/main/default/objects/Loan_Restructure_Request__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <label>Financial Account</label>
    <description>Link to the Financial Services Cloud loan account being restructured</description>
    <inlineHelpText>Select the loan account for which EMI restructuring is requested</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Loan Restructure Requests</relationshipLabel>
    <relationshipName>Loan_Restructure_Requests</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>