force-app/main/default/objects/Loan_Restructure_Request__c/fields/Interest_Impact__c.field-meta.xml
<CustomField>
    <fullName>Interest_Impact__c</fullName>
    <label>Interest Impact</label>
    <description>The additional interest amount that will be paid due to tenure extension</description>
    <inlineHelpText>Shows the total additional interest cost of extending the loan tenure</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>