force-app/main/default/objects/Loan_Restructure_Request__c/fields/New_EMI__c.field-meta.xml
<CustomField>
    <fullName>New_EMI__c</fullName>
    <label>New EMI</label>
    <description>The calculated new monthly EMI amount after restructuring</description>
    <inlineHelpText>This field shows the new EMI amount based on the selected restructuring option</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>