force-app/main/default/objects/Loan_Restructure_Request__c/fields/Requested_Option__c.field-meta.xml
<CustomField>
    <fullName>Requested_Option__c</fullName>
    <label>Requested Option</label>
    <description>The restructuring option selected by the customer from the presented choices</description>
    <inlineHelpText>Select the preferred restructuring option: Extend 1 Year, Extend 2 Years, or 3-Month Moratorium</inlineHelpText>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extend Tenure by 1 Year</fullName>
            </value>
            <value>
                <fullName>Extend Tenure by 2 Years</fullName>
            </value>
            <value>
                <fullName>3-Month Moratorium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>