force-app/main/default/objects/Loan_Restructure_Request__c/fields/RM_Callback_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>RM_Callback_Scheduled__c</fullName>
    <label>RM Callback Scheduled</label>
    <description>Indicates whether a callback with the Relationship Manager has been scheduled</description>
    <inlineHelpText>Check this box when the proactive handoff to RM is complete and callback is scheduled</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>