force-app/main/default/objects/Loan_Restructure_Request__c/fields/Tenure_Extension_Months__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Extension_Months__c</fullName>
    <label>Tenure Extension (Months)</label>
    <description>Number of months the loan tenure is being extended</description>
    <inlineHelpText>Enter 12 for 1-year extension, 24 for 2-year extension, or 0 for moratorium options</inlineHelpText>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>